Added Identity basic support. Added authentication controller and their ViewModels.

--- a/src/Api/CWSB.Services.Api/appsettings.Development.json
+++ b/src/Api/CWSB.Services.Api/appsettings.Development.json
@@ -1,9 +1,13 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=ChatWithStockBot;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "AllowedHosts" :  "*"
 }
