Added configurations for JWT

--- a/src/Api/CWSB.Services.Api/appsettings.Development.json
+++ b/src/Api/CWSB.Services.Api/appsettings.Development.json
@@ -9,5 +9,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts" :  "*"
+  "AllowedHosts": "*",
+  "AppSettings": {
+    "Secret": "MySuperSafeSecret",
+    "ExpiresInHours": 2,
+    "Issuer": "CWSB",
+    "Audience" : "https://localhost"
+  }
 }
