Added Stock Bot. Added Controller to new Post Chat Service.

--- a/src/Api/CWSB.Services.Api/CWSB.Services.Api.csproj
+++ b/src/Api/CWSB.Services.Api/CWSB.Services.Api.csproj
@@ -16,7 +16,12 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="RabbitMQ.Client" Version="6.2.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\CWSB.Core\CWSB.Core.csproj" />
   </ItemGroup>
 
 
