--- a/src/Web/MVC/CWSB.WebApp.MVC/CWSB.WebApp.MVC.csproj
+++ b/src/Web/MVC/CWSB.WebApp.MVC/CWSB.WebApp.MVC.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.10" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Core\CWSB.Core\CWSB.Core.csproj" />
+  </ItemGroup>
+
 </Project>
