Added RabbitMqConfiguration File Fixed appsetings for MVC Project. Added sample unit testss

--- a/src/Api/CWSB.Services.Api/appsettings.Development.json
+++ b/src/Api/CWSB.Services.Api/appsettings.Development.json
@@ -14,6 +14,12 @@
     "Secret": "MySuperSafeSecret",
     "ExpiresInHours": 2,
     "Issuer": "CWSB",
-    "Audience" : "https://localhost"
+    "Audience": "https://localhost"
+  },
+  "RabbitMQConfigurations": {
+    "HostName": "localhost",
+    "Port": 5672,
+    "UserName": "guest",
+    "Password": "guest"
   }
 }
