* Added SignalR client into MVC. * Added function to bot to send messages throug API. * MVC Register page and errors page aren't working well anymore.

--- a/src/Api/CWSB.Services.Api/appsettings.Development.json
+++ b/src/Api/CWSB.Services.Api/appsettings.Development.json
@@ -16,6 +16,9 @@
     "Issuer": "CWSB",
     "Audience": "https://localhost"
   },
+  "Cors": {
+    "CorsOrigins": "https://localhost:44333,https://192.168.15.26:44333"
+  },
   "RabbitMQConfigurations": {
     "HostName": "localhost",
     "Port": 5672,
