--- a/src/Bot/StockBot/appsettings.json
+++ b/src/Bot/StockBot/appsettings.json
@@ -4,5 +4,9 @@
     "Port": 5672,
     "UserName": "guest",
     "Password": "guest"
+  },
+  "BotConfigurations": {
+    "User": "bot@cwsb.com",
+    "Password": "Bot@5ystem"
   }
 }
