Added some error handlers.

--- a/src/Api/CWSB.Services.Api/CWSB.Services.Api.csproj
+++ b/src/Api/CWSB.Services.Api/CWSB.Services.Api.csproj
@@ -25,5 +25,9 @@
     <ProjectReference Include="..\..\Core\CWSB.Core\CWSB.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
+
 
 </Project>
