--- a/src/Bot/StockBot/appsettings.json
+++ b/src/Bot/StockBot/appsettings.json
@@ -7,6 +7,8 @@
   },
   "BotConfigurations": {
     "User": "bot@cwsb.com",
-    "Password": "Bot@5ystem"
-  }
+    "Password": "Bot@5ystem",
+    "ServicesUrl": "https://localhost:44339"
+  },
+  
 }
